@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-03T16:25:09Z",
+  "timestamp" : "2023-07-05T01:55:44Z",
   "count_outdated" : 192,
   "uniques_outdated" : 135,
-  "count" : 200,
-  "uniques" : 140,
+  "count" : 201,
+  "uniques" : 141,
   "clones" : [
     {
       "timestamp": "2023-06-22T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2023-07-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
