@@ -1,6 +1,6 @@
 {
-  "count": 8,
-  "uniques": 5,
+  "count": 9,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-06-22T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2023-07-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-04T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
